--- a/package.json
+++ b/package.json
@@ -6,8 +6,40 @@
   "repository": "https://github.com/mrkutly/dungeon-api",
   "author": "mark sauer-utley <mark.utley.713@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "db:start": "docker-compose up -d",
+    "dev": "nodemon",
+    "dev:watch": "node --inspect=5858 -r ts-node/register ./src/server.ts",
+    "postinstall": "npm run build",
+    "start": "node build/server.js",
+    "test": "jest"
+  },
   "dependencies": {
+    "@types/pg": "^7.14.0",
     "express": "^4.17.1",
+    "pg": "^7.16.0",
     "typescript": "^3.7.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.2",
+    "@types/node": "^13.1.1",
+    "@typescript-eslint/eslint-plugin": "^2.13.0",
+    "@typescript-eslint/parser": "^2.13.0",
+    "eslint": "^6.8.0",
+    "ts-node": "^8.5.4"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "**/*.test.ts",
+      "**/*.spec.ts",
+      ".git",
+      "node_modules"
+    ],
+    "watch": [
+      "src"
+    ],
+    "exec": "npm run dev:watch",
+    "ext": "ts"
   }
 }
