--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "db:start": "docker-compose up -d",
     "db:sync": "npx tsc && npx typeorm schema:sync",
     "dev": "tsc-watch --onSuccess \"node ./dist/server.js\"",
-    "start": "node dist/server.js",
+    "start": "npx pm2-runtime start pm2.yml",
     "postinstall": "npx tsc"
   },
   "dependencies": {
