--- a/package.json
+++ b/package.json
@@ -19,17 +19,21 @@
     "postinstall": "npm run db:sync"
   },
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/compression": "^1.0.1",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
+    "@types/jsonwebtoken": "^8.3.5",
     "@types/node": "^13.1.1",
     "@types/pg": "^7.14.0",
     "@types/swagger-ui-express": "^4.1.0",
+    "bcrypt": "^3.0.7",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.16.1",
     "pm2": "^4.2.1",
     "reflect-metadata": "^0.1.13",
@@ -38,5 +42,10 @@
     "typeorm": "^0.2.22",
     "typescript": "^3.7.4",
     "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.13.0",
+    "@typescript-eslint/parser": "^2.13.0",
+    "eslint": "^6.8.0"
   }
 }
