--- a/package.json
+++ b/package.json
@@ -26,14 +26,17 @@
     "@types/express": "^4.17.2",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/node": "^13.1.1",
+    "@types/nodemailer": "^6.4.0",
     "@types/pg": "^7.14.0",
     "@types/swagger-ui-express": "^4.1.0",
     "bcrypt": "^3.0.7",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.4.2",
     "pg": "^7.16.1",
     "pm2": "^4.2.1",
     "reflect-metadata": "^0.1.13",
