--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "db:drop": "docker exec -it dungeondbdev psql -U postgres -c \"drop database dungeondbdev\"",
     "db:start": "docker-compose up -d",
     "db:sync": "npx tsc && npx typeorm schema:sync",
+    "db:seed": "npx tsc && node dist/utils/seedDatabase.js",
     "dev": "tsc-watch --onSuccess \"node ./dist/server.js\"",
     "start": "npx pm2-runtime start pm2.yml",
     "postinstall": "npm run db:sync"
@@ -29,6 +30,7 @@
     "@types/nodemailer": "^6.4.0",
     "@types/pg": "^7.14.0",
     "@types/swagger-ui-express": "^4.1.0",
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.7",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
