--- a/package.json
+++ b/package.json
@@ -17,7 +17,24 @@
     "db:seed": "npx tsc && node dist/utils/seedDatabase.js",
     "dev": "tsc-watch --onSuccess \"node ./dist/server.js\"",
     "start": "npx pm2-runtime start pm2.yml",
-    "postinstall": "npm run db:sync"
+    "postinstall": "npm run db:sync",
+    "test": "jest --verbose --coverage",
+    "test:watch": "jest --verbose --watch"
+  },
+  "jest": {
+    "verbose": true,
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(src/.*/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   },
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
@@ -49,8 +66,15 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.25",
+    "@types/request-promise": "^4.1.45",
+    "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.13.0",
     "@typescript-eslint/parser": "^2.13.0",
-    "eslint": "^6.8.0"
+    "eslint": "^6.8.0",
+    "jest": "^24.9.0",
+    "request-promise": "^4.2.5",
+    "supertest": "^4.0.2",
+    "ts-jest": "^24.2.0"
   }
 }
