--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/node": "^13.1.1",
     "@types/nodemailer": "^6.4.0",
     "@types/pg": "^7.14.0",
+    "@types/redis": "^2.8.14",
     "@types/swagger-ui-express": "^4.1.0",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.7",
@@ -58,6 +59,7 @@
     "nodemailer": "^6.4.2",
     "pg": "^7.16.1",
     "pm2": "^4.2.1",
+    "redis": "^2.8.0",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.2",
     "tsc-watch": "^4.0.0",
@@ -67,13 +69,11 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.25",
-    "@types/request-promise": "^4.1.45",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.13.0",
     "@typescript-eslint/parser": "^2.13.0",
     "eslint": "^6.8.0",
     "jest": "^24.9.0",
-    "request-promise": "^4.2.5",
     "supertest": "^4.0.2",
     "ts-jest": "^24.2.0"
   }
