--- a/package.json
+++ b/package.json
@@ -65,16 +65,16 @@
     "tsc-watch": "^4.0.0",
     "typeorm": "^0.2.22",
     "typescript": "^3.7.4",
-    "winston": "^3.2.1"
-  },
-  "devDependencies": {
+    "winston": "^3.2.1",
     "@types/jest": "^24.0.25",
     "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "^2.13.0",
-    "@typescript-eslint/parser": "^2.13.0",
-    "eslint": "^6.8.0",
     "jest": "^24.9.0",
     "supertest": "^4.0.2",
     "ts-jest": "^24.2.0"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.13.0",
+    "@typescript-eslint/parser": "^2.13.0",
+    "eslint": "^6.8.0",
   }
 }
