--- a/package.json
+++ b/package.json
@@ -75,6 +75,6 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.13.0",
     "@typescript-eslint/parser": "^2.13.0",
-    "eslint": "^6.8.0",
+    "eslint": "^6.8.0"
   }
 }
