--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "debug.node.autoAttach": "on",
+  "debug.node.autoAttach": "off",
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
