--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "start": "npx pm2-runtime start pm2.yml",
     "postinstall": "npm run db:sync",
     "test": "jest --verbose --coverage",
-    "test:watch": "jest --verbose --watch"
+    "test:watch": "jest --verbose --watch --detectOpenHandles"
   },
   "jest": {
     "verbose": true,
@@ -43,35 +43,36 @@
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
+    "@types/jest": "^24.0.25",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/node": "^13.1.1",
     "@types/nodemailer": "^6.4.0",
     "@types/pg": "^7.14.0",
     "@types/redis": "^2.8.14",
+    "@types/supertest": "^2.0.8",
     "@types/swagger-ui-express": "^4.1.0",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.7",
+    "class-validator": "^0.11.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jest": "^24.9.0",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.4.2",
     "pg": "^7.16.1",
     "pm2": "^4.2.1",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^4.0.2",
     "swagger-ui-express": "^4.1.2",
+    "ts-jest": "^24.2.0",
     "tsc-watch": "^4.0.0",
     "typeorm": "^0.2.22",
     "typescript": "^3.7.4",
-    "winston": "^3.2.1",
-    "@types/jest": "^24.0.25",
-    "@types/supertest": "^2.0.8",
-    "jest": "^24.9.0",
-    "supertest": "^4.0.2",
-    "ts-jest": "^24.2.0"
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.13.0",
