test actions setup

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "db:sync": "npx tsc && npx typeorm schema:sync && node dist/utils/seedDatabase.js",
     "db:seed": "npx tsc && node dist/utils/seedDatabase.js",
     "dev": "tsc-watch --onSuccess \"node ./dist/server.js\"",
+    "build": "npx tsc",
     "start": "npx pm2-runtime start pm2.yml",
     "postinstall": "npm run db:sync",
     "test": "jest --verbose --coverage",
@@ -66,6 +67,7 @@
     "pm2": "^4.2.1",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.13",
+    "sqlite3": "^4.1.1",
     "supertest": "^4.0.2",
     "swagger-ui-express": "^4.1.2",
     "ts-jest": "^24.2.0",
