--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -12,20 +12,19 @@ jobs:
         node-version: [8.x, 10.x, 12.x]
 
     steps:
-      - uses: actions/checkout@v1
-      - uses: borales/actions-yarn@v2.0.0
-        with:
-          cmd: install # will run `yarn install` command
-      - uses: borales/actions-yarn@v2.0.0
-        with:
-          cmd: build # will run `yarn build` command
-      - uses: borales/actions-yarn@v2.0.0
-        with:
-          cmd: test # will run `yarn test` command
-        
-    env:
-      CI: true
-      TEST_JWT: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOjEsImlhdCI6MTU3ODM2MDAyOCwiZXhwIjoxNTc4NTMyODI4fQ.eKhzSWernP06Vm0v2gKNXOZXHuUvu33rN8S8gxoLjMk"
-      TEST_EMAIL: "test_account@test.com"
-      TEST_PASSWORD: "doggy1test2password3!"
-      TEST_SECRET: "badsecurityweaksecret"
+    - uses: actions/checkout@v1
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: npm install, build, and test
+      run: |
+        npm ci --ignore-scripts
+        npm run build --if-present
+        npm test
+      env:
+        CI: true
+        TEST_JWT: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOjEsImlhdCI6MTU3ODM2MDAyOCwiZXhwIjoxNTc4NTMyODI4fQ.eKhzSWernP06Vm0v2gKNXOZXHuUvu33rN8S8gxoLjMk"
+        TEST_EMAIL: "test_account@test.com"
+        TEST_PASSWORD: "doggy1test2password3!"
+        TEST_SECRET: "badsecurityweaksecret"
