--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "db:sync-tables": "npx tsc && npx typeorm schema:sync",
     "db:sync": "npx tsc && npx typeorm schema:sync && node dist/utils/seedDatabase.js",
     "db:seed": "npx tsc && node dist/utils/seedDatabase.js",
-    "dev": "tsc-watch --onSuccess \"node ./dist/server.js\"",
+    "dev": "NODE_ENV=development tsc-watch --onSuccess \"node ./dist/server.js\"",
+    "console": "NODE_ENV=development tsc-watch --onSuccess \"node --experimental-repl-await ./dist/repl.js\"",
     "build": "npx tsc",
     "start": "npx pm2-runtime start pm2.yml",
     "postinstall": "npm run db:sync",
