--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "lib": [
       "dom",
       "es2017"
-    ], /* Specify library files to be included in the compilation. */
+    ],
+    /* Specify library files to be included in the compilation. */
     // "allowJs": true,                       /* Allow javascript files to be compiled. */
     // "checkJs": true,                       /* Report errors in .js files. */
     // "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
@@ -60,5 +61,8 @@
     /* Advanced Options */
     "resolveJsonModule": true, /* Include modules imported with '.json' extension */
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
-  }
+  },
+  "exclude": [
+    "**/__mocks__/*"
+  ]
 }
