--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
+    "testTimeout": 10000,
     "testRegex": "(src/.*/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
     "moduleFileExtensions": [
       "ts",
