--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/compression": "^1.0.1",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/jest": "^24.0.25",
@@ -58,6 +59,7 @@
     "bcrypt": "^3.0.7",
     "class-validator": "^0.11.0",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
